# platform

./: .dockerignore  .env.example  .gitignore  AGENT_REGISTRY_GOVERNANCE_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMER_DEMO_SCRIPT.md  DEMO_GUIDE.md  DEVELOPMENT_GUIDE.md  HOW_IT_WORKS.md  LICENSE  MCP_ARCHITECTURE_GUIDELINES.md  MCP_SERVICE_INTEGRATION.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  TESTING_GUIDE.md  cleanup_duplicate_tools.py  demo_integration.py  demo_multi_service_agent.py  demo_sandbox_workflows.py  demo_working.py  docker-compose.yml  fix_router_import.py  fix_router_import.sh  mcp_calculator_server.py  mcp_service_wrapper_template.py  migrate.sh  pytest.ini  requirements-test.txt  run_api.sh  run_api_postgres.sh  run_demo.sh  run_dev_server.sh  run_migrations.sh  run_sandbox.py  test_api_endpoints.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
backend/: API_KEYS_README.md  CREDENTIAL_MANAGEMENT_ANALYSIS.md  Dockerfile  MODEL_ROUTER_README.md  PROMPT_REGISTRY_API.md  PROMPT_USAGE_GUIDE.md  alembic.ini  check_db_setup.py  compare_databases.py  create_prompt_tables.py  create_test_executions.py  fix_alembic_heads.py  fix_migration_conflict.py  fix_migration_version.py  fix_model_router_migration.py  init_api_keys_sqlite.py  init_routing_table.py  init_sqlite.py  migrate.py  requirements.txt  run_alembic.py  run_all_demos.sh  run_migration.py  test_step_tracking.py  (+5 more)
sdk/python/: README.md  pyproject.toml
sdk/python/orchestly/: __init__.py  cli.py  client.py  decorators.py  llm.py
sdk/python/tests/: test_sdk.py
(+636 files in other folders)
